@@ -13,15 +13,7 @@ extern int mainvar;
 /* This variable is defined in the shared library, and overridden by
    the main program.  */
 #ifndef XCOFF_TEST
-#ifdef SHARED
-/* SHARED is defined if we are compiling with -fpic/-fPIC.  */
 int overriddenvar = -1;
-#else
-/* Without -fpic, newer versions of gcc assume that we are not
-   compiling for a shared library, and thus that overriddenvar is
-   local.  */
-extern int overriddenvar;
-#endif
 #endif
 
 /* This variable is defined in the shared library.  */
@@ -84,13 +76,11 @@ shlib_shlibcall2 ()
   return shlib_overriddencall2 ();
 }
 
-#ifdef SHARED
 int
 shlib_overriddencall2 ()
 {
   return 7;
 }
-#endif
 #endif
 
 /* This function calls a function defined by the main program.  */
@@ -257,7 +247,7 @@ visibility_funptr ()
 
 #if defined (HIDDEN_UNDEF_TEST) || defined (PROTECTED_UNDEF_TEST)
 #ifdef WEAK_TEST
-#pragma weak visibility_var
+#pragma weak visibility_var;
 #endif
 extern int visibility_var;
 #else
@@ -332,90 +322,4 @@ asm (".hidden visibility_var");
 asm (".protected visibility");
 asm (".protected visibility_var");
 #endif
-#endif
-
-#ifdef HIDDEN_NORMAL_TEST
-int shlib_visibility_com;
-asm (".hidden shlib_visibility_com");
-
-int
-shlib_visibility_checkcom ()
-{
-  return shlib_visibility_com == 0;
-}
-
-int
-shlib_visibility_checkweak ()
-{
-  return 1;
-}
-#elif defined (HIDDEN_WEAK_TEST)
-#pragma weak shlib_visibility_undef_var_weak
-extern int shlib_visibility_undef_var_weak;
-asm (".hidden shlib_visibility_undef_var_weak");
-
-#pragma weak shlib_visibility_undef_func_weak
-extern int shlib_visibility_undef_func_weak ();
-asm (".hidden shlib_visibility_undef_func_weak");
-
-#pragma weak shlib_visibility_var_weak
-extern int shlib_visibility_var_weak;
-asm (".hidden shlib_visibility_var_weak");
-
-#pragma weak shlib_visibility_func_weak
-extern int shlib_visibility_func_weak ();
-asm (".hidden shlib_visibility_func_weak");
-
-int
-shlib_visibility_checkcom ()
-{
-  return 1;
-}
-
-int
-shlib_visibility_checkweak ()
-{
-  return &shlib_visibility_undef_var_weak == NULL
-	 && &shlib_visibility_undef_func_weak == NULL
-	 && &shlib_visibility_func_weak == NULL
-	 && &shlib_visibility_var_weak == NULL;
-}
-#else
-int
-shlib_visibility_checkcom ()
-{
-  return 1;
-}
-
-int
-shlib_visibility_checkweak ()
-{
-  return 1;
-}
-#endif
-
-#ifdef PROTECTED_TEST
-#ifdef SHARED
-int shared_data = 100;
-#else
-extern int shared_data;
-#endif
- 
-int *
-shared_data_p ()
-{
-  return &shared_data;
-}
- 
-int
-shared_func ()
-{
-  return 100;
-}
- 
-void *
-shared_func_p ()
-{
-  return shared_func;
-}
 #endif
